# zapmyco

./: .dockerignore  .editorconfig  .eslintignore  .gitattributes  .gitignore  .gitmodules  .npmrc  .nxdeps.json  .prettierignore  .prettierrc  .release-it.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.en.md  README.md  README.zh-CN.md  RELEASE_TEMPLATE.md  biome.json  build.rs  cspell.json  deno.json  dist-workspace.toml  docker-compose.yml  docker-readme.md  eslint.config.js  install.ps1  install.sh  lefthook.yml  lint-staged.config.js  nx.json  package.json  plan-core-extraction.md  pnpm-lock.yaml  release-plz.toml  sonar-project.properties  subagent-architecture.html  (+7 more)
.agents/: settings.json
.agents/commands/: build.md  increase-coverage.md  lint.md  release.md  spellcheck.md  test.md  typecheck.md
.agents/plans/: subagent-design.md  subagent-test.md
.cursor/: mcp.json
.devcontainer/: .env  .env.cn  Dockerfile  README.md  devcontainer.json  post_create.sh  setup_mirrors.sh  test_devcontainer.sh
.githooks/: pre-commit
.github/: RELEASE_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  devcontainer-test.yml  dist.yml  docker-build.yml  publish.yml  release-plz.yml  release.yml  rust-ci.yml
.husky/: pre-commit
apps/backend/: POETRY_SETUP.md  README.md  __init__.py  __main__.py  main.py  pyproject.toml  pytest.ini  smart_home.db  start_server.sh  test.db
apps/docs/: project.json  theme.config.tsx
apps/frontend/: eslint.config.js  package.json  pnpm-lock.yaml  postcss.config.js  project.json  tailwind.config.js  tsconfig.json  vite.config.ts
crates/zapmyco-core/: Cargo.toml
crates/zapmyco-core/src/: agent_config.rs  agent_error.rs  agent_event.rs  agent_loop.rs  lib.rs
docs/: ai-cli-prototype.html  api.md  approval-ux-preview.html  architecture.md  contributing.md  migration-to-core.md  openmanual.json  package-lock.json  package.json  pnpm-lock.yaml  release-flow.html  todos.md  vercel.json  全局依赖注入系统.md  卡片扩展系统设计.md  卡片选择规则设计.md  设计规则.md
docs/content/: index.mdx  quickstart.mdx
docs/plans/: 2026-05-14-prompt-cache-optimization.md  2026-07-19-migrate-run-to-core.md  2026-07-19-zapmyco-core-design.md
docs/public/: install.ps1  install.sh
examples/: basic-usage.ts  core-simple-chat.rs  progress-basic.rs  progress-multi-agent.rs  progress-multi-command.rs  select-multi.rs  select-single.rs
k8s/: deployment.yaml
skills/code-review/: SKILL.md
skills/commit/: SKILL.md
src/: App.tsx  DraggableGrid.tsx  GridLayout.test.tsx  GridLayout.tsx  a.json  adapters.rs  agent.rs  ai-agent.ts  cli.rs  cli.ts  conversation_logger.rs  datetime.rs  index.css  index.ts  index_test.ts  ink.ts  lib.rs  logging.rs  main.rs  models.rs  models.ts  notes.rs  run_command.rs  settings.rs  settings.ts  text-line-stream.ts  upgrade.rs  use-home-assistant.ts  web_fetch.rs  web_search.rs
src/__tests__/: index.test.ts  protocol.test.ts
src/agent/: agents_md.rs  chat.rs  conversation_loader.rs  conversation_logger.rs  env_info.rs  executor.rs  mod.rs  progress.rs  session_loader.rs  session_logger.rs  stream.rs  system_prompt.rs
src/cli/: index.ts
src/commands/: completion.rs  config_resolver.rs  core_run.rs  demo.rs  init.rs  mod.rs  note.rs  run.rs  uninstall.rs  upgrade.rs  web.rs
src/config/: defaults.ts  loader.ts  mod.rs  models.rs  settings.rs  types.ts
src/constants/: betas.ts
src/core/: adapters.rs  agent_config.rs  agent_loop.rs  agent_tool.rs  mod.rs  types.rs
src/i18n/: index.ts  (+1 more)
tests/: integration_test.rs
tools/: build-npm.ts  release.ts
web/: biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
(+792 files in other folders)
