[package]
name = "zapmyco"
version = "0.22.13"
edition = "2024"
rust-version = "1.95"
description = "An AI-powered CLI tool for interactive chat with LLMs"
license = "MIT"
repository = "https://github.com/shenjingnan/zapmyco"

[dependencies]
clap = { version = "4", features = ["derive"] }
anthropic-ai-sdk = "0.2"
inquire = "0.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3.32"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6.5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
