[workspace]
resolver = "2"
members = [
    "vendor/zapmyco-anthropic-ai-sdk",
    "vendor/zapmyco-grep",
]

[package]
name = "zapmyco"
version = "0.40.0"
edition = "2024"
rust-version = "1.95"
description = "An AI-powered CLI tool for interactive chat with LLMs"
license = "MIT"
repository = "https://github.com/shenjingnan/zapmyco"

[dependencies]
clap = { version = "4", features = ["derive", "string"] }
clap_complete = "4"
zapmyco-anthropic-ai-sdk = { version = "0.3.2", path = "vendor/zapmyco-anthropic-ai-sdk" }
zapmyco-grep = { version = "0.1.0", path = "vendor/zapmyco-grep" }
inquire = "0.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
url = "2"
thiserror = "2"
anyhow = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
futures-util = "0.3.32"
reqwest = "0.13"
mdka = "2"
crossterm = "0.29"
indicatif = "0.18"
ignore = "0.4"
globset = "0.4"
fs4 = { version = "1.1", features = ["tokio"] }
yaml_serde = "0.10.4"
ratatui = { version = "0.29", features = ["crossterm"] }
tui-textarea = "0.7.0"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6.5"
libc = "0.2"
rand = "0.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
