[package]
name = "zapmyco-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Environment-agnostic AI Agent runtime core — ReAct loop, tool abstraction, event system"
license = "MIT"
repository = "https://github.com/shenjingnan/zapmyco"

[dependencies]
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
futures-util = "0.3"
zapmyco-anthropic-ai-sdk = { version = "0.3", path = "../../vendor/zapmyco-anthropic-ai-sdk" }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = []
